# docx

./: .bashrc  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dockerignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  get_badges.py  mkdocs.yml  mypy.ini  pyproject.toml  repo_assets.py  template.env  tox.ini
authorized_keys/: .gitignore
docx_tpl/: assets.py  config.py  main.py  router.py  schemas.py
docx_tpl/helpers/: tools.py
downloads/: README.md  generated_doc.docx  test.docx
public_keys/: README.md  test_auth_site_com.pub
repo/: README.md  repo_assets.py
src/: README.md
src/docx/: __init__.py  assets.py  cli.py  config.py  depends.py  err_handlers.py  exceptions.py  main.py  middleware.py  router.py  schemas.py
src/docx/helpers/: security.py  tools.py
src/docx/router/: __init__.py  docx.py  home.py  open_api.py
src/docx/static/: bundle.css  custom.css  custom.js
src/docx/templates/: my_word_template.docx
templates/: .gitignore  README.md
templates/test_auth_site_com/: test_docx_template.docx
templates/test_auth_site_com/test-nsp/: sb611_v0.xlsm
templates/test_auth_site_com/test-nsp/pays/: sb611_v0.xlsm
tests/: .gitignore  README.md  conftest.py  generate-keys.sh  priv-key.pem  pub-key.pem  test_cant_upload_tpl.py  test_create_docx.py  test_create_empty_docx.py  test_delete.py  test_download_file.py  test_download_tpl.py  test_expire_token.py  test_fake_aud.py  test_get_list_tpl.py  test_nsp.py  test_tools.py  test_upload_tpl.py
tests/files/: test_docx_template_to_upload.txt
wiki/: README.md
wiki/docs/: api-docs.md  index.md  links.md  products.md  structure.md  testing.md
wiki/overrides/: main.html
wiki/overrides/assets/stylesheets/: main.css  palette.css
wiki/overrides/partials/: footer.html  header.html
wiki/overrides/partials/integrations/: analytics.html
wiki/site/: 404.html  index.html  sitemap.xml
wiki/site/api-docs/: index.html
wiki/site/assets/: custom.css
wiki/site/assets/javascripts/: bundle.efa0ade1.min.js.map
wiki/site/assets/javascripts/lunr/: wordcut.js
wiki/site/links/: index.html
wiki/site/notes-i-todo/: index.html
wiki/site/pro-i-contra/: index.html
wiki/site/products/: index.html
wiki/site/search/: search_index.json
wiki/site/structure/: index.html
wiki/site/testing/: index.html
