[tool.poetry]
name = "docx"
version = "0.1.0"
description = "Docx (MS Word) template engine."
authors = ["Mavlin Dm. <mavlind@list.ru>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "src/docx"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
aiofiles = "^23.1.0"
docxtpl = "^0.16.5"
fastapi = "^0.92.0"
logrich = "^0.7.0"
pathvalidate = "^2.5.2"
pydantic = {extras = ["email"], version = "^1.10.6"}
pyfields = "^1.7.0"
pyjwt = "^2.6.0"
python-magic = "^0.4.27"
python-multipart = "^0.0.6"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
yarl = "^1.8.2"

[tool.poetry.group.dev.dependencies]
asgi-lifespan = "^2.0.0"
black = "^23.1.0"
httpx = "^0.23.3"
mkdocs = "^1.4.2"
mkdocs-git-revision-date-plugin = "^0.3.2"
mkdocs-include-markdown-plugin = "^4.0.4"
mkdocs-material = "^9.1.3"
mkdocs-minify-plugin = "^0.6.4"
mkdocs-monorepo-plugin = "^1.0.4"
mypy = "^1.1.1"
override-pydantic-settings = "^1.0.1"
poetry-plugin-sort = "^0.1.1"
pre-commit = "^3.1.1"
pylint = "^2.17.0"
pytest = "^7.2.2"
pytest-asyncio = "^0.20.3"
pytest-picked = "^0.4.6"
pytest-testmon = "^1.4.5"
pytest-watch = "^4.2.0"
requests = "^2.28.2"
types-markdown = "^3.4.2.5"
types-requests = "^2.28.11.15"
types-toml = "^0.10.8.5"
watchdog = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
include = '\.pyi?$'
quiet = true
fast = true
